--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	<link href="/fonts/fontawesome-free-5.8.2-web/fontawesome-free-5.8.2-web/css/all.css" rel="stylesheet">
 	<!--[if lt IE 9]>
 		 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -19,7 +19,7 @@
 	<div class="user-forms">
 		<div class="tool">
 			<i></i>
-			<p>User forms</p>
+			<p>Restore Form</p>
 		</div>
 	</div>
 
@@ -75,6 +75,7 @@
 				</div>
 			
 				<div class="form">
+
 				</div>
 			
 			</div>
@@ -88,50 +89,29 @@
 
 				<div class="settings">
 
-					<!-- <div class="setting">
-						<i class="fas fa-arrows-alt-h"></i>
-						<p>Width</p>
-						<input type="range">
+					<div class="setting setting-adder">
+						<div class="wrapper-of-adder">
+							<p>Option</p>
+							<input type="text" class="form_element_input" placeholder="Text">
+							<i class="fas fa-plus add-option"></i>
+						</div>
+
+						<div class="wrapper-of-added-options">
+							
+							<div class="left-colomn">
+								<i class="fas fa-list"></i>
+								<p>ListOptions</p>
+							</div>
+
+							<ul class="right-colomn">
+								<li><p>Выбор</p><i class="fas fa-trash"></i></li>
+								<li><p>123</p><i class="fas fa-trash"></i></li>
+							</ul>
+
+						</div>
+
 					</div>
 
-					<div class="setting">
-						<i class="fas fa-text-width"></i>
-						<p>FontSize</p>
-						<input type="range">
-					</div>
-
-					<div class="setting">
-						<i class="fab fa-cuttlefish"></i>
-						<p>BorderRadius</p>
-						<input type="range">
-					</div>
-
-					<div class="setting">
-						<i class="fas fa-font"></i>
-						<p>FontFamily</p>
-						<select>
-							<option>Arial</option>
-							<option>TNR</option>
-						</select>
-					</div>
-
-					<div class="setting">
-					<i class="fas fa-eye-dropper"></i>
-						<p>FontColor</p>
-						<input type="color">
-					</div>
-
-					<div class="setting">
-						<i class="fas fa-eye-dropper"></i>
-						<p>BackgroundColor</p>
-						<input type="color">
-					</div>
-
-					<div class="setting">
-						<i class="fas fa-eye-dropper"></i>
-						<p>BorderBackground</p>
-						<input type="color">
-					</div> -->
 
 				</div>
 
